# AVT

./: .gitignore  CHANGELOG_DEV.MD  README.md  pyproject.toml  random_test_file.txt  requirements.txt  session_20260526_222906.json  session_20260613_151948.json
.deepseek/: instructions.md
.deepseek/pastes/: paste-2026-06-13-143028-c9f01361.md  paste-2026-06-13-144250-41744ba2.md  paste-2026-06-13-144740-36c43614.md  paste-2026-06-13-163451-41226a33.md  paste-2026-06-13-164115-62aab0cb.md
.qwen/: settings.json  settings.json.orig
audiobrain/: __init__.py  __main__.py  cli.py
audiobrain/effects/: __init__.py  bitcrusher.py  chain.py  delay.py  distortion.py  flanger.py  glitch.py  pitch.py
audiobrain/model/: __init__.py  config.py  core.py  feature_extractor.py  generation_pipeline.py  pipeline.py  projection.py  synthesizer.py  transformer.py  visualizer.py
audiobrain/processing/: __init__.py  config.py  preprocessor.py  segmenter.py  validator.py
audiobrain/tests/: __init__.py  run_tests.py  test_core.py  test_projection.py  test_transformer.py
audiobrain/tui/: __init__.py  app.py  app_header.py  widgets.py
avt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: CHANGELOG_DEV.MD  context.md
src/: config.py
src/experiments/: train.py
tests/: generate_30s_sample.py  generate_random_samples.py  run_external_test.py  test_audio_generation.py  test_custom_audio.py  test_effects.py
tests/test_data/results/: 07070075_drift_generated.html  (+1 more)
tests/test_visualization/: test_e2e_generation.py  test_visualizer.py
